pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/make-top-predicate.rkt
#;
(exn-pred #rx"Async-ChannelTop could not be converted to a contract")

#lang typed/racket

(make-predicate Async-ChannelTop)